manifests/kibana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: xxxxxx.rkjh.xyz
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /
